--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 
 <body>
-  <input id="input-el" type="text">
+  <!--<input id="input-el" type="text">
   <br>
-  <button id="input-btn">SAVE INPUT</button>
+ <button id="input-btn">SAVE INPUT</button> -->
+  <button id="box">Open the box!</button>
 
   <script src=" script.js"></script>
 
-    <!--
+  <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
   teal, blue, blurple, magenta, pink!
   -->
-    <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
 
 </html>
