functionality to push input to myLeads array

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <!--<input id="input-el" type="text">
+  <input id="input-el" type="text">
   <br>
- <button id="input-btn">SAVE INPUT</button> -->
-  <button id="box">Open the box!</button>
+  <button id="input-btn">SAVE INPUT</button>
+  <!-- <button id="box">Open the box!</button> -->
 
   <script src=" script.js"></script>
 
@@ -23,5 +23,4 @@
   -->
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
-
 </html>
