add DOM element to change ul

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <br>
   <button id="input-btn">SAVE INPUT</button>
   <!-- <button id="box">Open the box!</button> -->
-
+  <!-- Create an unordered list element (<ul>) -->
+  <ul id="ul-el"></ul>
   <script src=" script.js"></script>
 
   <!--
@@ -23,4 +24,5 @@
   -->
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
+
 </html>
